# formalin

./: CHANGELOG.md  LICENSE  README.md  behaviour.md  cabal.project  formalin.cabal
lib/: Formalin.hs  Opaque.hs
lib/Data/: Formalin.hs
lib/Formalin/: Builder.hs  LabelParser.hs  Model.hs  Parser.hs  Servant.hs  Test.hs
tst/Formalin/: ParserSpec.hs
