cabal-version       : 3.0

name                : formalin
version             : 0.0.0.0
build-type          : Simple

category            : Web
synopsis            : Haskell library for preserving data structures in standard HTML forms.
description         : Please see the README.

homepage            : https://github.com/mastarija/formalin
bug-reports         : https://github.com/mastarija/formalin/issues

author              : Luka Hadžiegrić
maintainer          : luka@mastarija.com

license             : MIT
license-file        : LICENSE
copyright           : Copyright (C) Luka Hadžiegrić 2020

common core
  build-depends     : base
                    , text
                    , opaque
                    , attoparsec
                    , bytestring
                    , scientific
                    , unordered-containers

  default-language  : Haskell2010

library
  import            : core
  hs-source-dirs    : lib
  exposed-modules   : Formalin
