cabal-version       : 3.0

name                : formalin
version             : 0.0.0.0

category            : Data
synopsis            : Simple structured HTML forms.
description         : Please see the README.

homepage            : https://github.com/mastarija/formalin#readme
bug-reports         : https://github.com/mastarija/formalin/issues

author              : Luka Hadžiegrić
maintainer          : luka@mastarija.com

license             : MIT
-- license-file        : LICENSE
copyright           : Copyright (C) Luka Hadžiegrić 2022

source-repository head
  type              : git
  location          : https://github.com/mastarija/formalin

common core
  ghc-options       : -Wall
  build-depends     : base
                    , text
                    , wai
                    , warp
                    , servant
                    , servant-server
                    , http-media
                    , bytestring
                    , lucid
                    , http-api-data
                    , attoparsec
                    , aeson
                    , vector
  default-language  : Haskell2010

library
  import            : core
  hs-source-dirs    : lib
  exposed-modules   : Formalin
                    , Formalin.Test
                    , Formalin.Model
                    , Formalin.Parser
                    , Formalin.Builder
                    , Formalin.Servant
